[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pymermaid"
version = "0.1.0"
description = "A Python library for parsing and rendering Mermaid diagrams"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
dependencies = [
    "click",
    "fastapi",
    "graphviz",
    "lark",
    "pydantic",
    "uvicorn",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "black",
    "isort",
    "mypy",
]

[project.scripts]
pymermaid = "pymermaid.cli:cli"
